<resources>
    <string name="app_name">Countdown</string>
    <string name="name">Enter Your Name</string>
    <string name="birthday">Enter Your Birthday</string>
    <string name="confirm">Confirm</string>
    <string name="person_name">Sayed Mostafa</string>
    <string name="person_age">20</string>
    <string name="time_left_to_birthday">Time Left To 21\'s Birthday</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="days">Days</string>
</resources>