<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".CountDataActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/edit_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/background"
        android:padding="@dimen/PaddingScreen"
        android:src="@drawable/ic_edit" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/PaddingScreen">


            <androidx.cardview.widget.CardView
                android:id="@+id/profile_image_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="95dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_profile" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/name_text"
                style="@style/textView"
                android:text="@string/person_name"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/age_text"
                style="@style/textView"
                android:padding="0dp"
                android:text="@string/person_age"
                android:textSize="@dimen/TextSizeLarge" />

            <TextView
                android:id="@+id/time_left_text"
                style="@style/textView"
                android:layout_marginBottom="@dimen/MarginMed"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/time_left_to_birthday"
                android:textSize="@dimen/TextSizeSmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/MarginSmall"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/counterTextView"
                        android:maxLength="3"
                        android:text="000"
                        android:textSize="24sp" />

                    <TextView
                        style="@style/textView"
                        android:fontFamily="@font/cairo_regular"
                        android:text="@string/days" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/MarginSmall"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView

                        style="@style/counterTextView"
                        android:text="00"
                        android:textSize="24sp" />

                    <TextView
                        style="@style/textView"
                        android:fontFamily="@font/cairo_regular"
                        android:text="@string/hours" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/MarginSmall"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/counterTextView"
                        android:text="00"
                        android:textSize="24sp" />

                    <TextView
                        style="@style/textView"
                        android:fontFamily="@font/cairo_regular"
                        android:text="@string/minutes" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/MarginSmall"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/counterTextView"
                        android:text="00"
                        android:textSize="24sp" />

                    <TextView
                        style="@style/textView"
                        android:fontFamily="@font/cairo_regular"
                        android:text="@string/seconds" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
